--- a/dianych-website/app/globals.css
+++ b/dianych-website/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --red-color: #A52A2A;
 }
 
 @theme inline {
@@ -20,5 +22,8 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.red {
+  color: var(--red-color);
 }
