fix modal add order button with proper styles rename files

--- a/dianych-website/app/globals.css
+++ b/dianych-website/app/globals.css
@@ -24,6 +24,10 @@ body {
   color: var(--foreground);
 }
 
-.red {
+.color-red {
   color: var(--red-color);
+}
+
+.bg-red {
+  background-color: var(--red-color);
 }
